--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -21,37 +21,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kkb-wi-WDg">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I1i-q6-un8">
+                                <rect key="frame" x="226" y="382" width="101" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Push To Green"/>
                                 <connections>
-                                    <segue destination="3AV-k4-WVJ" kind="show" id="fdx-uY-4SL"/>
+                                    <action selector="greeButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9rk-ld-4Me"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q43-H4-3c2">
-                                <rect key="frame" x="139" y="267" width="97" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7O-ks-N7T">
+                                <rect key="frame" x="36" y="382" width="109" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                                <state key="normal" title="Push To Yellow"/>
+                                <connections>
+                                    <action selector="yellowButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QTj-yj-BMs"/>
+                                </connections>
+                            </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vbu-Cb-4lh">
+                                <rect key="frame" x="163" y="429" width="51" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.76560706925407629" blue="0.74051338743580408" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="Kkb-wi-WDg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FCF-NS-0e1"/>
-                            <constraint firstItem="Kkb-wi-WDg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R1D-3b-zN7"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Red" id="fBS-8F-lVO">
                         <barButtonItem key="backBarButtonItem" title="Go To Red" id="3W7-1S-wG0"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="textField" destination="q43-H4-3c2" id="xwY-gH-pOf"/>
+                        <outlet property="segueSwitch" destination="vbu-Cb-4lh" id="tnL-hP-YC7"/>
+                        <segue destination="3AV-k4-WVJ" kind="show" identifier="Yellow" id="nz7-Z3-csX"/>
+                        <segue destination="LTa-hD-HHX" kind="show" identifier="Green" id="HU8-Mi-9CJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="360.80000000000001" y="18.440779610194905"/>
+            <point key="canvasLocation" x="85.599999999999994" y="17.541229385307346"/>
         </scene>
         <!--Yellow-->
         <scene sceneID="J2v-RA-Cl8">
@@ -64,22 +68,7 @@
                     <view key="view" contentMode="scaleToFill" id="Bxc-xj-3qH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4tT-zH-CRl">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="LTa-hD-HHX" kind="show" id="mlV-lH-PcW"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" red="1" green="0.95140382206664798" blue="0.39884532554759999" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="4tT-zH-CRl" firstAttribute="centerY" secondItem="Bxc-xj-3qH" secondAttribute="centerY" id="0aD-aj-Uzs"/>
-                            <constraint firstItem="4tT-zH-CRl" firstAttribute="centerX" secondItem="Bxc-xj-3qH" secondAttribute="centerX" id="0vm-xy-FGR"/>
-                            <constraint firstItem="4tT-zH-CRl" firstAttribute="centerY" secondItem="Bxc-xj-3qH" secondAttribute="centerY" id="85o-8K-B37"/>
-                            <constraint firstItem="4tT-zH-CRl" firstAttribute="centerX" secondItem="Bxc-xj-3qH" secondAttribute="centerX" id="Doa-QP-sYg"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Yellow" id="u74-nf-fDD">
                         <barButtonItem key="backBarButtonItem" title="Go To Yellow" id="wNF-pn-sbN"/>
@@ -87,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OBG-nf-zGY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1220" y="17.541229385307346"/>
+            <point key="canvasLocation" x="830" y="-546"/>
         </scene>
         <!--Green-->
         <scene sceneID="D1J-JT-6A0">
@@ -100,20 +89,7 @@
                     <view key="view" contentMode="scaleToFill" id="jPz-a7-R7v">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C6V-5e-vaw">
-                                <rect key="frame" x="160" y="318" width="54" height="30"/>
-                                <state key="normal" title="Dismiss"/>
-                                <connections>
-                                    <segue destination="Yi4-ES-f60" kind="unwind" unwindAction="unwindToRedWithUnwindSegue:" id="50P-dq-DsO"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" red="0.76470069018339437" green="1" blue="0.81322992625669532" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="C6V-5e-vaw" firstAttribute="centerY" secondItem="jPz-a7-R7v" secondAttribute="centerY" id="4Dn-Wf-W2S"/>
-                            <constraint firstItem="C6V-5e-vaw" firstAttribute="centerX" secondItem="jPz-a7-R7v" secondAttribute="centerX" id="BFJ-Ux-T46"/>
-                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Green" id="yvC-xL-xvO" userLabel="Green">
@@ -130,14 +106,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6D3-QR-TS0" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Yi4-ES-f60" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2004" y="17.541229385307346"/>
+            <point key="canvasLocation" x="830" y="225"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hdc-cb-MaC">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qiq-zE-lWJ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="wZf-QD-coA">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wZf-QD-coA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.67233777259995797" green="0.75978750159579889" blue="1" alpha="1" colorSpace="calibratedRGB"/>
